# pet-food-analytics-platform

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  data_dictionary.md
docs/adr/: 001-batch-over-streaming.md  002-cloud-over-local.md  003-bigquery-over-duckdb.md  004-duckdb-for-data-profiling.md  005-one-row-per-product.md  006-bronze-silver-definition.md  007-local-gcs-destination-pattern.md
docs/specs/: bronze_layer.md  marts_transform.md  silver_layer.md
notebooks/: data_profiling.ipynb  duckdb_gcs.ipynb  silver_layer.ipynb  test_silver_layer.ipynb
notebooks/ingestion/: download.ipynb  test_download.ipynb
src/common/: duckdb_gcs.py  gcs_s3.py
src/ingestion/: download.ipynb  download.py
src/processing/: bronze_layer.py  data_profile.py  silver_layer.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_bronze_layer.py  test_download.py  test_silver_layer.py
