[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pet-food-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.48",
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
